--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 
 <body>
     <nav>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-    </label>
-    <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="publications.html">Publications</a>
-        <a href="talks.html">Talks</a>
-        <a href="code.html">Code</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="contact.html">Contact</a>
-    </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="publications.html">Publications</a>
+            <a href="talks.html">Talks</a>
+            <a href="code.html">Code</a>
+            <a href="teaching.html">Teaching</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
     <div class="page">
@@ -101,7 +101,7 @@
                 <h2>News</h2>
                 <ul>
                     <li>
-                        <p><b>Oct 30, 2025:</b> I gave the talk <a href="/files/lonardi2025dtuflow.pdf">Message-passing
+                        <p><b>Oct 30, 2025:</b> I gave the talk <a href="/files/lonardi2025mp.pdf">Message-passing
                                 on hypergraphs: detectability, phase transitions and higher-order
                                 information</a> at the Complex Systems Seminar at QMUL.</p>
                     </li>
