--- a/talks.html
+++ b/talks.html
@@ -12,18 +12,18 @@
 
 <body>
     <nav>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-    </label>
-    <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="publications.html">Publications</a>
-        <a href="talks.html">Talks</a>
-        <a href="code.html">Code</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="contact.html">Contact</a>
-    </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="publications.html">Publications</a>
+            <a href="talks.html">Talks</a>
+            <a href="code.html">Code</a>
+            <a href="teaching.html">Teaching</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
     <div class="page">
@@ -36,7 +36,7 @@
                         <p>
                             <strong>Message-passing on hypergraphs: detectability, phase transitions and higher-order
                                 information</strong><br />
-                            Complex Systems Seminar, QMUL, London (2025)<br />
+                            Complex Systems Seminar, QMUL, London, UK (2025)<br />
                             <a href="files/lonardi2025mp_abstract.pdf">[Abstract]</a>
                             <a href="/files/lonardi2025mp.pdf">[Slides]</a>
                         </p>
@@ -62,7 +62,7 @@
                     <li>
                         <p>
                             <strong>Bilevel optimization for flow control in optimal transport network</strong><br />
-                            Netsci 2023, Vienna, Austria (2023)<br />
+                            Netsci 2023, Vienna, AT (2023)<br />
                             <a href="files/lonardi2023bilopt.pdf">[Abstract]</a>
                             <a href="files/lonardi2023netscibilopt.pdf">[Slides]</a>
                         </p>
@@ -71,7 +71,7 @@
                         <p>
                             <strong>Infrastructure adaptation and emergence of loops in network routing with
                                 time-dependent loads</strong><br />
-                            Netsci 2023 Satellite, Networks & Cities, Vienna, Austria (2023)<br />
+                            Netsci 2023 Satellite, Networks & Cities, Vienna, AT (2023)<br />
                             <a href="files/lonardi2023tvf.pdf">[Abstract]</a>
                             <a href="files/lonardi2023netscitvf.pdf">[Slides]</a>
                         </p>
