--- a/talks.html
+++ b/talks.html
@@ -36,7 +36,7 @@
                         <p>
                             <strong>Message-passing on hypergraphs: detectability, phase transitions and higher-order
                                 information</strong><br />
-                            Complex Systems Seminar, QMUL, London, UK (2025)<br />
+                            Complex Systems Seminar, Queen Mary University of London, London, UK (2025)<br />
                             <a href="files/lonardi2025mp_abstract.pdf">[Abstract]</a>
                             <a href="/files/lonardi2025mp.pdf">[Slides]</a>
                         </p>
