fixed broken link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h2>News</h2>
                 <ul>
                     <li>
-                        <p><b>Oct 30, 2025:</b> I gave the talk <a href="/files/lonardi2025mp.pdf">Message-passing
+                        <p><b>Oct 30, 2025:</b> I gave the talk <a href="files/lonardi2025mp.pdf">Message-passing
                                 on hypergraphs: detectability, phase transitions and higher-order
                                 information</a> at the Complex Systems Seminar at QMUL.</p>
                     </li>
