--- a/talks.html
+++ b/talks.html
@@ -39,6 +39,7 @@
                             Complex Systems Seminar, Queen Mary University of London, London, UK (2025)<br />
                             <a href="files/lonardi2025mp_abstract.pdf">[Abstract]</a>
                             <a href="/files/lonardi2025mp.pdf">[Slides]</a>
+                            <a href="https://www.youtube.com/watch?v=2n8T9Mz_rGE&t=1844s">[Video]</a>
                         </p>
                     </li>
                     <li>
