--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <p><b>Oct 30, 2025:</b> I gave the talk <a href="files/lonardi2025mp.pdf">Message-passing
                                 on hypergraphs: detectability, phase transitions and higher-order
                                 information</a> at the Complex Systems Seminar at QMUL. A <a
-                                href="https://www.youtube.com/watch?v=2n8T9Mz_rGE&t=1844s">recording of the talk</a> is
+                                href="https://www.youtube.com/watch?v=2n8T9Mz_rGE">recording of the talk</a> is
                             available.</p>
                     </li>
                     <li>
