--- a/code.html
+++ b/code.html
@@ -12,75 +12,75 @@
 
 <body>
     <nav>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-    </label>
-    <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="publications.html">Publications</a>
-        <a href="talks.html">Talks</a>
-        <a href="code.html">Code</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="contact.html">Contact</a>
-    </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="publications.html">Publications</a>
+            <a href="talks.html">Talks</a>
+            <a href="code.html">Code</a>
+            <a href="teaching.html">Teaching</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>These are the codes I contributed to. The [Publications] links take you to the publications page and
-                    highlight the works corresponding to each code. Note that there may be multiple publications for one
+                <p>These are the codes I contributed to. The publication links highlight the works corresponding to each
+                    code. Note that there may be multiple publications for one
                     code.
                 </p>
                 <h2>Code</h2>
                 <ul>
                     <li>
-                        <p>
-                            unified-posthoc-explanations-kgc<br />
+                        <p><strong>
+                                unified-posthoc-explanations-kgc</strong><br />
                             <a href="https://github.com/SonyResearch/unified-posthoc-explanations-kgc">[GitHub]</a>
                             <a href="publications.html#unifying-posthoc-explanations">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            hypergraph-message-passing<br />
+                        <p><strong>
+                                hypergraph-message-passing</strong><br />
                             <a href="https://github.com/nickruggeri/hypergraph-message-passing">[GitHub]</a>
                             <a href="publications.html#message">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            MultiOT<br />
+                        <p><strong>
+                                MultiOT</strong><br />
                             <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
                             <a href="publications.html#cohesive-1,cohesive-2">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            BROT<br />
+                        <p><strong>
+                                BROT</strong><br />
                             <a href="https://github.com/aleable/BROT">[GitHub]</a>
                             <a href="publications.html#bilevel">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            MODI<br />
+                        <p><strong>
+                                MODI</strong><br />
                             <a href="https://github.com/aleable/MODI">[GitHub]</a>
                             <a href="https://pypi.org/project/modi-flows/">[PyPI]</a>
                             <a href="publications.html#immiscible">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            N-STARK<br />
+                        <p><strong>
+                                N-STARK</strong><br />
                             <a href="https://github.com/aleable/N-STARK">[GitHub]</a>
                             <a href="publications.html#infrastructure">[Publications]</a>
                         </p>
                     </li>
                     <li>
-                        <p>
-                            McOpt<br />
+                        <p><strong>
+                                McOpt</strong><br />
                             <a href="https://github.com/aleable/McOpt">[GitHub]</a>
                             <a href="publications.html#multi-1,multi-2">[Publications]</a>
                         </p>
