--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
                     <li>
                         <p id="unifying-posthoc-explanations">
                             <strong>Unifying Post-hoc Explanations of Knowledge Graph Completions</strong><br />
-                            <u>Alessandro Lonardi</u>, Samy Badreddine, Tarek R. Besold, Pablo Sanchez
+                            AL, Samy Badreddine, Tarek R. Besold, Pablo Sanchez
                             Martin<br />
                             <a href="https://arxiv.org/abs/2507.22951">[arXiv]</a>
                             <a href="https://github.com/SonyResearch/unified-posthoc-explanations-kgc">[GitHub]</a>
@@ -55,7 +55,7 @@
                         <p id="cohesive-1">
                             <strong>Cohesive urban bicycle infrastructure design through optimal transport routing in
                                 multilayer networks</strong><br />
-                            <u>Alessandro Lonardi</u>, Michael Szell, Caterina De Bacco<br />
+                            AL, Michael Szell, Caterina De Bacco<br />
                             <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532">[J. R. Soc.
                                 Interface (2025)]</a>
                             <a href="https://arxiv.org/abs/2405.02052">[arXiv]</a>
@@ -67,7 +67,7 @@
                         <p id="message">
                             <strong>Message-Passing on Hypergraphs: Detectability, Phase Transitions, and Higher-Order
                                 Information</strong><br />
-                            Nicolò Ruggeri*, <u>Alessandro Lonardi</u>*, Caterina De Bacco<br />
+                            Nicolò Ruggeri*, AL*, Caterina De Bacco<br />
                             <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b">[J. Stat. Mech.
                                 (2024)]</a>
                             <a href="https://arxiv.org/abs/2312.00708">[arXiv]</a>
@@ -81,7 +81,7 @@
                         <p id="bilevel">
                             <strong>Bilevel Optimization for Traffic Mitigation in Optimal Transport
                                 Networks</strong><br />
-                            <u>Alessandro Lonardi</u>, Caterina De Bacco<br />
+                            AL, Caterina De Bacco<br />
                             <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">[Phys. Rev.
                                 Lett. (2023)]</a>
                             <a href="https://arxiv.org/abs/2306.16246">[arXiv]</a>
@@ -93,7 +93,7 @@
                         <p id="immiscible">
                             <strong>Immiscible Color Flows in Optimal Transport Networks for Image
                                 Classification</strong><br />
-                            <u>Alessandro Lonardi</u>*, Diego Baptista*, Caterina De Bacco<br />
+                            AL*, Diego Baptista*, Caterina De Bacco<br />
                             <a href="https://www.frontiersin.org/articles/10.3389/fphy.2023.1089114/abstract">[Front.
                                 Phys. (2023)]</a>
                             <a href="https://arxiv.org/abs/2205.02938">[arXiv]</a>
@@ -107,7 +107,7 @@
                         <p id="infrastructure">
                             <strong>Infrastructure adaptation and emergence of loops in network routing with
                                 time-dependent loads</strong><br />
-                            <u>Alessandro Lonardi</u>, Enrico Facca, Mario Putti, Caterina De Bacco<br />
+                            AL, Enrico Facca, Mario Putti, Caterina De Bacco<br />
                             <a href="https://journals.aps.org/pre/abstract/10.1103/PhysRevE.107.024302">[Phys. Rev. E
                                 (2023)]</a>
                             <a href="https://arxiv.org/abs/2112.10620">[arXiv]</a>
@@ -118,7 +118,7 @@
                     <li>
                         <p id="multi-1">
                             <strong>Multicommodity routing optimization for engineering networks</strong><br />
-                            <u>Alessandro Lonardi</u>, Mario Putti, Caterina De Bacco<br />
+                            AL, Mario Putti, Caterina De Bacco<br />
                             <a href="https://www.nature.com/articles/s41598-022-11348-9">[Sci. Rep. (2022)]</a>
                             <a href="https://arxiv.org/abs/2110.06171">[arXiv]</a>
                             <a href="https://github.com/aleable/McOpt">[GitHub]</a>
@@ -129,7 +129,7 @@
                         <p id="cohesive-2">
                             <strong>Optimal Transport in Multilayer Networks for Traffic Flow
                                 Optimization</strong><br />
-                            Abdullahi Adinoyi Ibrahim, <u>Alessandro Lonardi</u>, Caterina De Bacco<br />
+                            Abdullahi Adinoyi Ibrahim, AL, Caterina De Bacco<br />
                             <a href="https://www.mdpi.com/1999-4893/14/7/189">[Algorithms (2021)]</a>
                             <a href="https://arxiv.org/abs/2106.07202">[arXiv]</a>
                             <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
@@ -139,7 +139,7 @@
                     <li>
                         <p id="multi-2">
                             <strong>Designing optimal networks for multicommodity transport problem</strong><br />
-                            <u>Alessandro Lonardi</u>, Enrico Facca, Mario Putti, Caterina De Bacco<br />
+                            AL, Enrico Facca, Mario Putti, Caterina De Bacco<br />
                             <a href="https://link.aps.org/doi/10.1103/PhysRevResearch.3.043010">[Phys. Rev. Res.
                                 (2021)]</a>
                             <a href="https://arxiv.org/abs/2010.14377">[arXiv]</a>
@@ -153,7 +153,6 @@
                     <li>
                         <p>
                             <strong>Designing Networks with Adaptation Rules and Optimal Transport</strong><br />
-                            Alessandro Lonardi<br />
                             <a
                                 href="https://publikationen.uni-tuebingen.de/xmlui/handle/10900/153202?locale-attribute=en">[University
                                 of Tübingen (2024)]</a>
