--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     problems that I then enjoy solving.</p>
                 <p>
                     If you want to know more, you can see my <a href="publications.html">publications</a>, <a
-                        href="talks.html">talks</a>, and <a href="code.html">code</a> or <a href='contact.html'>contact
+                        href="talks.html">talks</a> and <a href="code.html">code</a>, or <a href='contact.html'>contact
                         me</a>.</p>
                 </p>
             </div>
