--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alessandro Lonardi | Contact</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
+    <link rel="icon" type="image/svg+xml" sizes="any"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
 </head>
+
 <body>
     <nav>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-    </label>
-    <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="publications.html">Publications</a>
-        <a href="talks.html">Talks</a>
-        <a href="code.html">Code</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="contact.html">Contact</a>
-    </div>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="publications.html">Publications</a>
+            <a href="talks.html">Talks</a>
+            <a href="code.html">Code</a>
+            <a href="teaching.html">Teaching</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
     <div class="page">
@@ -28,18 +31,38 @@
             <div class="content">
                 <p>If you have any questions or comments, formal or informal, feel free to reach out!</p>
                 <h2>Addresses</h2>
-                <p><a href="mailto:a.lonardi@qmul.ac.uk"><div class="email">a.lonardi@<span>qmul.</span>ac.</span>uk</div></a></p>
-                <p><a href="mailto:alessandro.lonardi.vr@gmail.com"><div class="email"></div><div class="email">alessandro.lonardi.vr@<span>gmail.</span>com</div></a></p>
-                <p>School of Mathematical Sciences, Queen Mary University of London, Mile End Road, London E1 4NS, United Kingdom</p>
+                <p><a href="mailto:a.lonardi@qmul.ac.uk">
+                        <div class="email">a.lonardi@<span>qmul.</span>ac.</span>uk</div>
+                    </a></p>
+                <p><a href="mailto:alessandro.lonardi.vr@gmail.com">
+                        <div class="email"></div>
+                        <div class="email">alessandro.lonardi.vr@<span>gmail.</span>com</div>
+                    </a></p>
+                <p>School of Mathematical Sciences, Queen Mary University of London, Mile End Road, London E1 4NS,
+                    United Kingdom</p>
                 <h2>Links</h2>
                 <ul>
-                    <li><p><a href="https://github.com/aleable">GitHub</a></li>
-                    <li><p><a href="https://arxiv.org/search/?query=Alessandro+Lonardi&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></p></li>
-                    <li><p><a href="https://scholar.google.com/citations?user=KPLxOj0AAAAJ&hl=en&oi=ao">Google Scholar</a></p></li>
-                    <li><p><a href="https://orcid.org/0000-0003-4866-8088">ORCID</a></p></li>
-                    <li><p><a href="https://bsky.app/profile/aleable.bsky.social">Bluesky</a></p></li>
-                    <li><p><a href="https://www.linkedin.com/in/alonardi/">LinkedIn</a></p></li>
-                    <li><p><a href="https://www.seresearch.qmul.ac.uk/ccs/people/alonardi/">QMUL</a></li>
+                    <li>
+                        <p><a href="https://github.com/aleable">GitHub</a>
+                    </li>
+                    <li>
+                        <p><a
+                                href="https://arxiv.org/search/?query=Alessandro+Lonardi&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p><a href="https://scholar.google.com/citations?user=KPLxOj0AAAAJ&hl=en&oi=ao">Google
+                                Scholar</a></p>
+                    </li>
+                    <li>
+                        <p><a href="https://orcid.org/0000-0003-4866-8088">ORCID</a></p>
+                    </li>
+                    <li>
+                        <p><a href="https://www.linkedin.com/in/alonardi/">LinkedIn</a></p>
+                    </li>
+                    <li>
+                        <p><a href="https://www.seresearch.qmul.ac.uk/ccs/people/alonardi/">QMUL</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -48,4 +71,5 @@
     <footer>
     </footer>
 </body>
+
 </html>
